Website - Add fix for dialog z-index issue (HDS-4377) (#2692)

--- a/website/app/styles/pages/application/sidebar.scss
+++ b/website/app/styles/pages/application/sidebar.scss
@@ -58,6 +58,19 @@ body.application.index {
 // ALL THE OTHER PAGES
 
 body.application:not(.index) {
+  // if dialog is open, set sidebar z-index to 1
+  &.doc-page-wrapper:has(dialog[open]),
+  &.doc-page-wrapper:has(.hds-code-editor--is-full-screen) {
+    --doc-z-index-sidebar: 1;
+
+    .doc-scroll-to-top {z-index: 1;}
+  }
+
+  // if code editor is in full screen mode, set page header & scroll to top z-index to 1
+  &.doc-page-wrapper:has(.hds-code-editor--is-full-screen) {
+    .doc-page-header, .doc-scroll-to-top {z-index: 1;}
+  }
+
   // Notice: for `display` and animation/transition look below
   .doc-page-sidebar {
     position: fixed;
